k8s/11-servicios-datos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicios-datos-deployment
  namespace: aeropartners
  labels:
    app: servicios-datos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicios-datos
  template:
    metadata:
      labels:
        app: servicios-datos
    spec:
      containers:
      # Servicio de Datos v1
      - name: servicio-datos-v1
        image: us-central1-docker.pkg.dev/aeropartners-saga-dev/uniandes-misw4406/servicio-datos-v1:1.0
        ports:
        - containerPort: 8000
          name: datos-v1
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"

      # Servicio de Datos v2
      - name: servicio-datos-v2
        image: us-central1-docker.pkg.dev/aeropartners-saga-dev/uniandes-misw4406/servicio-datos-v2:1.0
        ports:
        - containerPort: 8000
          name: datos-v2
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
