k8s/04-pulsar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulsar-service
  namespace: aeropartners
  labels:
    app: pulsar
spec:
  type: ClusterIP
  ports:
    - name: pulsar
      port: 6650
      targetPort: 6650
      protocol: TCP
    - name: admin
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: pulsar
